// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hotel Details page should execute getServerSideProps with de locale 1`] = `
{
  "props": {
    "data": {},
    "error": {
      "message": "",
    },
    "featureToggles": {
      "release_ib_enabled": true,
    },
    "isError": false,
    "isGuestUser": false,
    "isInnBusinessAppPage": false,
    "isLoading": false,
    "promotionBannerData": null,
  },
}
`;

exports[`Hotel Details page should execute getServerSideProps with gb locale 1`] = `
{
  "props": {
    "data": {},
    "error": {
      "message": "",
    },
    "featureToggles": {
      "release_ib_enabled": true,
    },
    "isError": false,
    "isGuestUser": false,
    "isInnBusinessAppPage": true,
    "isLoading": false,
    "promotionBannerData": null,
  },
}
`;

exports[`Hotel Details page should handle getServerSideProps with custom headers 1`] = `
{
  "props": {
    "data": {},
    "error": {
      "message": "",
    },
    "featureToggles": {
      "release_ib_enabled": true,
    },
    "isError": false,
    "isGuestUser": false,
    "isInnBusinessAppPage": false,
    "isLoading": false,
    "promotionBannerData": null,
  },
}
`;

exports[`Hotel Details page should handle missing locale in getServerSideProps 1`] = `
{
  "props": {
    "data": {},
    "error": {
      "message": "",
    },
    "featureToggles": {
      "release_ib_enabled": true,
    },
    "isError": false,
    "isGuestUser": false,
    "isInnBusinessAppPage": false,
    "isLoading": false,
    "promotionBannerData": null,
  },
}
`;

exports[`Hotel Details page should match the snapshot 1`] = `
<div>
  <div
    data-testid="HotelDetailsPage"
  />
</div>
`;
